[package]
name = "spirv_parse"
version = "0.1.0"
authors = ["Nanopro <nanopro1g@gmail.com>"]
edition = "2018"

[workspace]
    members = [
      "generator",
    ]

[dependencies]
serde = { version = "1", features = ['derive']}
serde_json = "1"
generator = { path = "./generator", version = "1.0" }


