[package]
name = "spirv_parse"
version = "0.1.0"
authors = ["Nanopro <nanopro1g@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "generator",
]

[features]
default = ["vk-format"]
vk-format = ["ash"]


[dependencies]
serde = { version = "1", features = ['derive']}
serde_json = "1"
generator = { path = "./generator", version = "1.0" }

[build-dependencies]
generator = { path = "./generator", version = "1.0" }


[dependencies.ash]
version="0.29.0"
optional = true

[profile.test]
features = ["vk-format"]

