[package]
name = "spirv_parse"
version = "0.1.0"
authors = ["Nanopro <nanopro1g@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "SPIR-V parser and analyzer."

[workspace]
members = [
  "generator",
]

[features]
default = ["vk-format"]
vk-format = ["ash"]


[dependencies]
serde = { version = "1", features = ['derive']}
serde_json = "1"
bitflags = "1.2"
derivative = "2"

[build-dependencies]
generator = { path = "generator", version = "1.0.0" }


[dependencies.ash]
version="^0.30"
optional = true

[profile.test]
features = ["vk-format"]

