[package]
name = "generator"
version = "1.0.0"
authors = ["Nanopro <nanopro1g@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# proc-macro = true
[dependencies]
syn = { version = "1", features = ["full"]}
quote = "1"
proc-macro2 = "1"
serde_json = "1"



